fix(pdf): expose Content-Disposition in CORS config, fix User.isEnabled check, refactor Bootstrap PDF viewer modal